--- a/themes/esv-deggendorf/hugo.yaml
+++ b/themes/esv-deggendorf/hugo.yaml
@@ -1,18 +1,6 @@
 baseURL: 'https://example.org/'
-languageCode: 'de-de'
+languageCode: 'de-DE'
 title: 'My New Hugo Site'
-
-menus:
-  main:
-  - name: 'Home'
-    pageRef: '/'
-    weight: 10
-  - name: 'Posts'
-    pageRef: '/posts'
-    weight: 20
-  - name: 'Tags'
-    pageRef: '/tags'
-    weight: 30
 
 module:
   hugoVersion:
