--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,8 +15,13 @@ languages:
 params:
   logo: "images/logo.png"
 
+paginate: 3
+
 menus:
   main:
+  - name: 'Home'
+    pageRef: '/'
+    weight: 1
   - name: 'News'
     pageRef: '/news'
     weight: 10
