--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
-baseURL: 'https://esv-deggendorf.de/'
-languageCode: 'de-DE'
-title: 'ESV Deggendorf'
-theme: 'esv-deggendorf'
+baseURL: https://esv-deggendorf.de/
+languageCode: de-DE
+title: ESV Deggendorf
+theme: esv-deggendorf
 
 defaultContentLanguage: de
 languages:
@@ -13,28 +13,37 @@ languages:
     languageName: Deutsch
 
 params:
-  logo: "images/logo.png"
+  logo: images/logo.png
 
 paginate: 3
 
 menus:
   main:
-  - name: 'Home'
-    pageRef: '/'
-    weight: 1
-  - name: 'News'
-    pageRef: '/news'
-    weight: 10
-  - name: 'Menu 2'
-    pageRef: '/menu2'
-    weight: 20
-  - name: 'Menu 3'
-    pageRef: '/menu3'
-    weight: 30
-  - name: 'Menu 4'
-    pageRef: '/menu4'
-    weight: 40
+    - name: "Home"
+      pageRef: "/"
+      weight: 1
+    - name: "News"
+      pageRef: "/news"
+      weight: 10
+    - name: "Vorstandschaft"
+      pageRef: "/vorstandschaft"
+      weight: 20
+    - name: "Trainer"
+      pageRef: "/trainer"
+      weight: 30
+    - name: "Mannschaften"
+      pageRef: "/mannschaften"
+      weight: 40
+    - name: "Faustball"
+      pageRef: "/faustball"
+      weight: 50
+    - name: "Fitness"
+      pageRef: "/fitness"
+      weight: 60
+    - name: "Impressum"
+      pageRef: "/impressum"
+      weight: 99
 
 disableKinds:
-- taxonomy
-- term
+  - taxonomy
+  - term
