--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tailwind": "npx tailwindcss -i ./themes/esv-deggendorf/assets/css/main.css -o ./themes/esv-deggendorf/assets/dist/main.css",
-    "tailwind:watch": "npx tailwindcss -i ./themes/esv-deggendorf/assets/css/main.css -o ./themes/esv-deggendorf/assets/dist/main.css --watch"
+    "tailwind": "npx tailwindcss -i ./assets/css/main.css -o ./assets/dist/main.css",
+    "tailwind:watch": "npx tailwindcss -i ./assets/css/main.css -o ./assets/dist/main.css --watch"
   },
   "keywords": [],
   "author": "",
