--- a/hugo.yaml
+++ b/hugo.yaml
@@ -19,8 +19,8 @@ params:
   iconInstagram: icons/icon-instagram.svg
   iconMenu: icons/icon-menu.svg
 
-paginate: 6
-summaryLength: 50
+pagination:
+  pagerSize: 6
 
 menus:
   main:
