--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tailwind": "npx tailwindcss -i ./assets/css/main.css -o ./assets/dist/main.css",
-    "tailwind:watch": "npx tailwindcss -i ./assets/css/main.css -o ./assets/dist/main.css --watch"
+    "tailwind": "npx @tailwindcss/cli -i ./assets/css/main.css -o ./assets/dist/main.css",
+    "tailwind:watch": "npx @tailwindcss/cli -i ./assets/css/main.css -o ./assets/dist/main.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^4.0.0"
   }
 }
